--- a/Coding.html
+++ b/Coding.html
@@ -80,7 +80,7 @@
         <ul class="list-unstyled">
             <p class="h4">I use Stata most of time. I also code with Python, Go, and R.</p>
             <br>
-            <p class="h4"> 1. This is a project which can download abstracts from journals and store them as a WORD
+            <p class="h4"> 1. This is a project which can download abstracts from journals and save them as a WORD/TXT
                 document. <a href="https://github.com/chenyangfinance/FinanceJournal">[Github Link]</a></p>
             <p class="h4">This project helps me to run a Wechat official account to spread contents about finance,
                 economics, and accounting.</p>
