--- a/Links.html
+++ b/Links.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description"
-        content="Corporate Finance, Corporate Governvance, Chen Yang Durham, Chen Yang Finance, 杨晨 杜伦大学" />
-    <meta name="Keywords" content="Corporate Finance, Corporate Governvance, Chen Yang Durham, Chen Yang Finance" />
+    content="Chen Yang 杨晨, a PhD student in Finance at Durham University Business School. My research areas are corporate finance and corporate governance. " />
+    <meta name="Keywords" content="Corporate Finance, Corporate Governance, Chen Yang Durham, Chen Yang Finance, 杨晨 杜伦大学 吉林大学" />
 
     <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
     <title>Chen Yang</title>
