--- a/Links.html
+++ b/Links.html
@@ -161,6 +161,9 @@
                     <a href="http://www.gormley.info/phd-notes.html">Prof. Todd A. Gormley</a> (with Washington U. in St. Louis,
                     sharing lecture notes of "Empirical Methods in Corporate Finance" )
                 </li>
+                <li style="font-size: large;">
+                    <a href="https://yihui.org/">Yihui Xie 谢益辉</a> (software engineer at RStudio, R coding)
+                </li>
             </ul>
 
 
