--- a/CN.html
+++ b/CN.html
@@ -135,12 +135,12 @@
                     CSR, the Economy and
                     Financial Markets 2021 </p>
             </li>
-            <li class="lead">
+            <!-- <li class="lead">
                 CEO的家乡认同和企业不当行为. <p style="font-size: large; font-style: italic;">合作者 Dr Zicheng
                     Lei (King's), Prof. Dimitris Petmezas (Durham),
                     and Prof. Raghavendra Rau (Cambridge).</p>
                 <p style="font-size: large; ">会议宣讲: FMA European 2021</p>
-            </li>
+            </li> -->
         </ol>
         <br>
 
@@ -151,7 +151,7 @@
             </strong>
         </h3>
         <ol>
-            <li class="lead">CEO的家乡认同和并购.</li>
+            <!-- <li class="lead">CEO的家乡认同和并购.</li> -->
         </ol>
 
         <br>
