--- a/index.html
+++ b/index.html
@@ -79,8 +79,10 @@
         <hr /> <br>
         <div class="lead"> I am a PhD student in Finance. I graduated from Leeds University Business School in 2018 and
             Jilin University
-            School of Economics in 2016. I love corporate finance, financial economics, behavioural finance, cooking, and diet
-            coke.</div>
+            School of Economics in 2016. I am hooked on corporate finance, financial economics, behavioural finance, cooking, and diet
+            coke. <br>
+            <br>
+        Contact me at: <p style="color:sienna">chen.yang2@durham.ac.uk</p> </div>
         <br>
         
         <h3>
@@ -143,12 +145,12 @@
                     CSR, the Economy and
                     Financial Markets 2021 </p>
             </li>
-            <li class="lead">
+            <!-- <li class="lead">
                 CEO Home Bias and Financial Misconduct. <p style="font-size: large; font-style: italic;">with Dr Zicheng
                     Lei (King's), Prof. Dimitris Petmezas (Durham),
                     and Prof. Raghavendra Rau (Cambridge).</p>
                 <p style="font-size: large; ">Present at: FMA European 2021</p>
-            </li>
+            </li> -->
         </ol>
         <br>
 
@@ -159,7 +161,7 @@
             </strong>
         </h3>
         <ol>
-            <li class="lead">CEO Home Bias and M&A.</li>
+            <!-- <li class="lead">CEO Home Bias and M&A.</li> -->
         </ol>
 
         <br>
