--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description"
         content="Chen Yang 杨晨, a PhD student in Finance at Durham University Business School. My research areas are corporate finance and corporate governance. " />
-    <meta name="Keywords" content="Corporate Finance, Corporate Governance, Chen Yang Durham, Chen Yang Finance, 杨晨 杜伦大学 吉林大学" />
+    <meta name="Keywords"
+        content="Corporate Finance, Corporate Governance, Chen Yang Durham, Chen Yang Finance, 杨晨 杜伦大学 吉林大学" />
 
     <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
     <title>Chen Yang</title>
@@ -57,7 +58,7 @@
                 <li><a href="./CV.html">CV</a></li>
                 <li><a href="./Coding.html">Coding</a></li>
                 <li><a href="./Links.html">Links</a></li>
-                <li><a href="./Notes.html">Notes</a></li>   
+                <li><a href="./Notes.html">Notes</a></li>
                 <li><a href="./CN.html">中文</a></li>
             </ul>
         </div>
@@ -79,12 +80,14 @@
         <hr /> <br>
         <div class="lead"> I am a PhD student in Finance. I graduated from Leeds University Business School in 2018 and
             Jilin University
-            School of Economics in 2016. I am hooked on corporate finance, financial economics, behavioural finance, cooking, and diet
+            School of Economics in 2016. I am hooked on corporate finance, financial economics, behavioural finance,
+            cooking, and diet
             coke. <br>
             <br>
-        Contact me at: <p style="color:sienna">chen.yang2@durham.ac.uk</p> </div>
+            Contact me at: <p style="color:sienna">chen.yang2@durham.ac.uk</p>
+        </div>
         <br>
-        
+
         <h3>
             <strong>
                 Education
@@ -136,7 +139,7 @@
             <li class="lead">
                 <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3718687" target="_blank">CEO Birthplace
                     Identity
-                    and Corporate Social Responsibility</a>.
+                    and Corporate Social Responsibility.</a>
                 <p style="font-size: large; font-style: italic;">with Dr Zicheng Lei (King's), Prof. Dimitris Petmezas
                     (Durham)
                     and<a href="https://www.jbs.cam.ac.uk/faculty-research/faculty-a-z/raghavendra-rau/#item1"
@@ -145,12 +148,14 @@
                     CSR, the Economy and
                     Financial Markets 2021 </p>
             </li>
-            <!-- <li class="lead">
-                CEO Home Bias and Financial Misconduct. <p style="font-size: large; font-style: italic;">with Dr Zicheng
+            <li class="lead">
+
+                <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4017747" target="_blank">CEO Personal Reputation and Financial Misconduct.</a> <p style="font-size: large; font-style: italic;">with
+                    Dr Zicheng
                     Lei (King's), Prof. Dimitris Petmezas (Durham),
                     and Prof. Raghavendra Rau (Cambridge).</p>
                 <p style="font-size: large; ">Present at: FMA European 2021</p>
-            </li> -->
+            </li>
         </ol>
         <br>
 
