--- a/CN.html
+++ b/CN.html
@@ -126,7 +126,7 @@
 
         <ol>
             <li class="lead">
-                <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3718687" target="_blank">CEO的家乡认同和企业社会责任</a>.
+                <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3718687" target="_blank">CEO的家乡认同和企业社会责任.</a>
                 <p style="font-size: large; font-style: italic;">合作者 Dr Zicheng Lei (King's), Prof. Dimitris Petmezas
                     (Durham)
                     and<a href="https://www.jbs.cam.ac.uk/faculty-research/faculty-a-z/raghavendra-rau/#item1"
@@ -135,12 +135,12 @@
                     CSR, the Economy and
                     Financial Markets 2021 </p>
             </li>
-            <!-- <li class="lead">
-                CEO的家乡认同和企业不当行为. <p style="font-size: large; font-style: italic;">合作者 Dr Zicheng
+            <li class="lead">
+                <a>CEO的个人声誉和企业不当行为.</a> <p style="font-size: large; font-style: italic;">合作者 Dr Zicheng
                     Lei (King's), Prof. Dimitris Petmezas (Durham),
                     and Prof. Raghavendra Rau (Cambridge).</p>
                 <p style="font-size: large; ">会议宣讲: FMA European 2021</p>
-            </li> -->
+            </li>
         </ol>
         <br>
 
