--- a/Links.html
+++ b/Links.html
@@ -128,12 +128,19 @@
                     <a href="https://sraf.nd.edu/data/augmented-10-x-header-data/">Augmented 10-X Header Data (US firm
                         headquarters)</a>
                 </li>
+                <li style="font-size: large;">
+                    <a href="https://soe.shu.edu.cn/syzhongxin/ggwgsjzy.htm">Chinese and global micro-economics data resources 中国与世界公共微观数据资源（上海大学整理）</a>
+                </li>
 
             </ul>
             <h3>
                 <strong>Scholars' Websites:</strong>
             </h3>
             <ul>
+                <li style="font-size: large;">
+                    <a href="http://mba.tuck.dartmouth.edu/pages/faculty/ken.french/index.html">Prof. Kenneth R. French</a> (with Dartmouth College, Fama-French factors data)
+                </li>
+                
                 <li style="font-size: large;">
                     <a href="https://alexedmans.com/research/">Prof. Alex Edmans</a> (with LBS, very interesting
                     financial and economic contents)
@@ -144,7 +151,7 @@
                 </li>
                 <li style="font-size: large;">
                     <a href="https://stumblingandmumbling.typepad.com/">Chris Dillow</a> (inspiring articles on
-                    behavioural economics and usiness)
+                    behavioural economics and business)
                 </li>
                 <li style="font-size: large;">
                     <a href="http://kaichen.work/">Kai Chen</a> (sharing SAS, Python, and Stata coding)
@@ -163,6 +170,22 @@
                 </li>
                 <li style="font-size: large;">
                     <a href="https://yihui.org/">Yihui Xie 谢益辉</a> (software engineer at RStudio, R coding)
+                </li>
+
+                <li style="font-size: large;">
+                    <a href="https://www.ssc.wisc.edu/~bhansen/">Prof Bruce E. Hansen</a> (with U. of Wisconsin, two excellent open-access textbooks on Econometrics, datasets attached as well)
+                </li>
+
+                <li style="font-size: large;">
+                    <a href="https://www.ivo-welch.info/home/">Prof Ivo Welch</a> (with UCLA, the founder and editor of <i>Critical Finance Review</i>, sharing teaching materials on corporate finance)
+                </li>
+
+                <li style="font-size: large;">
+                    <a href="https://maryannfeldman.web.unc.edu/">Prof Maryann Feldman</a> (with U. of North Carolina Chapel Hill, a summary article on "Innovative Data Sources for Economic Analysis")
+                </li>
+
+                <li style="font-size: large;">
+                    <a href="http://public.kenan-flagler.unc.edu/faculty/kuhnenc/RESEARCH/research.html">Prof Camelia M. Kuhnen</a> (with U. of North Carolina Chapel Hill, US CEO turnover data, related to her JFE 2013 paper)
                 </li>
             </ul>
 
