--- a/Notes.html
+++ b/Notes.html
@@ -6,8 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description"
-    content="Chen Yang 杨晨, a PhD student in Finance at Durham University Business School. My research areas are corporate finance and corporate governance. " />
-    <meta name="Keywords" content="Corporate Finance, Corporate Governance, Chen Yang Durham, Chen Yang Finance, 杨晨 杜伦大学 吉林大学" />
+        content="Chen Yang 杨晨, a PhD student in Finance at Durham University Business School. My research areas are corporate finance and corporate governance. " />
+    <meta name="Keywords"
+        content="Corporate Finance, Corporate Governance, Chen Yang Durham, Chen Yang Finance, 杨晨 杜伦大学 吉林大学" />
     <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
     <title>Chen Yang</title>
 
@@ -97,10 +98,10 @@
                     questions and doing research.)
                 <li style="font-size: large;">
                     <a
-                        href="https://www.yuque.com/docs/share/6aca8c02-de27-47e0-b09e-a01b904705e5?# 《Top Chinese Journals》">中文经管期刊目录</a> (更新四个中文经管顶级期刊的目录，包括经济研究，金融研究，管理世界，和中国工业经济)
+                        href="https://www.yuque.com/docs/share/6aca8c02-de27-47e0-b09e-a01b904705e5?# 《Top Chinese Journals》">中文经管期刊目录</a>
+                    (更新四个中文经管顶级期刊的目录，包括经济研究，金融研究，管理世界，和中国工业经济)
 
             </ul>
-
 
         </ul>
     </div>
@@ -118,7 +119,6 @@
         <img src="https://raw.githubusercontent.com/chenyangfinance/chenyangfinance.github.io/main/picture_corporate_finance.jpg"
             alt="Corporate Finance">
     </div>
-
 
 </body>
 <br>
