--- a/Coding.html
+++ b/Coding.html
@@ -79,15 +79,24 @@
         <ul class="list-unstyled">
             <p class="h4">I use Stata most of time. I also code with Python, Go, and R.</p>
             <br>
-            <p class="h4"> 1. This is a project which can download abstracts from journals and save them as a WORD/TXT
-                document. <a href="https://github.com/chenyangfinance/FinanceJournal">[Github Link]</a></p>
-            <p class="h4">This project helps me to run a Wechat official account to spread contents about finance,
+            <p class="h4"> 1. <b>Finance Journal Abstract Downloader</b> <a href="https://github.com/chenyangfinance/FinanceJournal">[Github Link]</a></p>
+            <p class="h4">This is a project which downloads abstracts from journals' websites and save them as a WORD/TXT
+                document. I operate a Wechat official account with this project to spread contents about finance,
                 economics, and accounting.</p>
+                <br>
                 <div class="text-center">
                     <img src="https://raw.githubusercontent.com/chenyangfinance/chenyangfinance.github.io/main/wechat.png"
                         alt="Wechat" width = "300">
                 </div>
-    </div>
+                <br>
+                <br>
+                <p class="h4"> 2.  <b>Get Violation Tracker Data</b>  <a href="https://github.com/chenyangfinance/violation_tracker">[Github Link]</a>
+                    <p class="h4"> This is a Python file which scrapes all records from Violation Tracker Database. In empirical studies of corporate finance, Violation Tracker Database is used to measure corporate frauds. </p> 
+                    <br>
+                    <p class="h4"> <i>Violation Tracker Website</i>: <br>
+                        "Violation Tracker, produced by the Corporate Research Project of Good Jobs First, brings together enforcement data obtained from more than 400 federal, state and local regulatory agencies with responsibility for banking, consumer protection, environmental, wage & hour, unfair labor practice, health and safety, workplace discrimination and other matters. We also collect information from the Justice Department on cases referred to it by these agencies as well as cases it initiated on offenses such as price-fixing, foreign bribery, false claims, civil rights abuses and tax evasion." </p>  
+
+                </div>
 
 
     </div>
