--- a/Coding.html
+++ b/Coding.html
@@ -77,7 +77,7 @@
         </h2>
         <br>
         <ul class="list-unstyled">
-            <p class="h4">I use Stata most of time. I also code with Python, Go, and R.</p>
+            <p class="h4">I use Stata most of the time. I also code with Python, Go, and R.</p>
             <br>
             <p class="h4"> 1. <b>Finance Journal Abstract Downloader</b> <a href="https://github.com/chenyangfinance/FinanceJournal">[Github Link]</a></p>
             <p class="h4">This is a project which downloads abstracts from journals' websites and save them as a WORD/TXT
