--- a/Coding.html
+++ b/Coding.html
@@ -77,7 +77,7 @@
         </h2>
         <br>
         <ul class="list-unstyled">
-            <p class="h4">I use Stata most of the time. I also code with Python, Go, and R.</p>
+            <p class="h4">I use Stata most of time. I also code with Python, Go, and R.</p>
             <br>
             <p class="h4"> 1. <b>Finance Journal Abstract Downloader</b> <a href="https://github.com/chenyangfinance/FinanceJournal">[Github Link]</a></p>
             <p class="h4">This is a project which downloads abstracts from journals' websites and save them as a WORD/TXT
@@ -96,9 +96,22 @@
                     <p class="h4"> <i>Violation Tracker Website</i>: <br>
                         "Violation Tracker, produced by the Corporate Research Project of Good Jobs First, brings together enforcement data obtained from more than 400 federal, state and local regulatory agencies with responsibility for banking, consumer protection, environmental, wage & hour, unfair labor practice, health and safety, workplace discrimination and other matters. We also collect information from the Justice Department on cases referred to it by these agencies as well as cases it initiated on offenses such as price-fixing, foreign bribery, false claims, civil rights abuses and tax evasion." </p>  
 
+                        <br>
+                        <br>
+
+                        <p class="h4"><b><u>Stata Packages</u></b> 
+                            <p class="h4"> 1. DID3:  </p>  
+                            <p class="h4"> did3 is a command that do univariate difference-in-difference test. ALL RESULTS IN ONE GO! But it cannot be installed using "<i>ssc install</i>", what a pity! We need to download the ado and help file from Keith Kranker's github repository and save them in your stata path (e.g., C:\Program Files\Stata16\ado\base\d). Always remember to put it in file "d", the first letter of did3. </p> 
+                            <br>
+                            <p class="h4"> Finally, the output of did3 is like below:  </p> 
+                            <div class="text-center">
+                                <img src="https://raw.githubusercontent.com/chenyangfinance/chenyangfinance.github.io/main/did3.png"
+                                    alt="did3" width = "300">   
+
+                    <br>
                 </div>
 
-
+                
     </div>
 
 
