--- a/Coding.html
+++ b/Coding.html
@@ -100,11 +100,12 @@
                         <br>
 
                         <p class="h4"><b><u>Stata Packages</u></b> 
-                            <p class="h4"> 1. DID3:  </p>  
-                            <p class="h4"> did3 is a command that do univariate difference-in-difference test. ALL RESULTS IN ONE GO! But it cannot be installed using "<i>ssc install</i>", what a pity! We need to download the ado and help file from Keith Kranker's github repository and save them in your stata path (e.g., C:\Program Files\Stata16\ado\base\d). Always remember to put it in file "d", the first letter of did3. </p> 
+                            <p class="h4"> 1. DID3  <a href="https://github.com/kkranker/kk-adofiles">[Github Link]</a></p>  
+                            <p class="h4"> did3 is a command that do univariate difference-in-difference test. ALL RESULTS IN ONE GO! But it cannot be installed using "<i>ssc install</i>", what a pity! We need to download the ado and help file from  <a href="https://github.com/kkranker/kk-adofiles">Keith Kranker's github repository</a> and save them in your stata path (e.g., C:\Program Files\Stata16\ado\base\d). Always remember to put it in file "d", the first letter of did3. </p> 
                             <br>
                             <p class="h4"> Finally, the output of did3 is like below:  </p> 
                             <div class="text-center">
+                                <br>
                                 <img src="https://raw.githubusercontent.com/chenyangfinance/chenyangfinance.github.io/main/did3.png"
                                     alt="did3" width = "600">   
 
