--- a/Coding.html
+++ b/Coding.html
@@ -101,7 +101,7 @@
 
                         <p class="h4"><b><u>Stata Packages</u></b> 
                             <p class="h4"> 1. DID3: univar DID <a href="https://github.com/kkranker/kk-adofiles">[Github Link]</a></p>  
-                            <p class="h4"> did3 is a command that does univariate difference-in-difference test. ALL RESULTS IN ONE GO! But it cannot be installed using "<i>ssc install</i>", what a pity! We need to download the ado and help file from  <a href="https://github.com/kkranker/kk-adofiles">Keith Kranker's github repository</a> and save them in your stata path (e.g., C:\Program Files\Stata16\ado\base\d). Always remember to put it in file "d", the first letter of did3. </p> 
+                            <p class="h4"> did3 is a command for univariate difference-in-difference test. ALL RESULTS IN ONE GO!!! But it cannot be installed using "<i>ssc install</i>", what a pity! We need to download the ado and help file from  <a href="https://github.com/kkranker/kk-adofiles">Keith Kranker's github repository</a> and save them in your stata path (e.g., C:\Program Files\Stata16\ado\base\d). Always remember to put it in file "d", the first letter of did3. </p> 
                             <br>
                             <p class="h4"> Finally, the output of did3 is like below:  </p> 
                             <div class="text-center">
@@ -111,7 +111,7 @@
                     <br>
                 </div>
                 <p class="h4"> 2. kmatch: the best matching tool in Stata</p> 
-                <p class="h4"> kmatch is the most comprehensive tool in Stata to do matching. It is capable to do a wide range of matching issues, including multivariate-distance and propensity-score matching (PSM), including entropy balancing, inverse probability weighting, (coarsened) exact matching, and regression adjustment. The most exciting and useful thing is kmatch can add <b> EXACT MATCHING !!!</b>. This means, e.g., when you calculate propensity score in PSM, you can use some variables (firm size, leverage, ROA, etc.) to get the score but require exact matching of some variables (industry, year, state) at the same time.          
+                <p class="h4"> kmatch is the most comprehensive tool in Stata to do matching. It is capable to suit a wide range of matching issues, including multivariate-distance and propensity-score matching (PSM), entropy balancing, inverse probability weighting, (coarsened) exact matching, and regression adjustment. The most useful function of kmatch is <b> EXACT MATCHING !!!</b> e.g., when you do PSM, you can use some variables (firm size, leverage, ROA, etc.) to calculate the score but require exact matching of some other variables (probably industry, year, state, etc.) at the same time.          
        </p> 
        <p class="h4"> Easy to install with:
        </p> 
