--- a/index.html
+++ b/index.html
@@ -144,9 +144,9 @@
                     (Durham)
                     and<a href="https://www.jbs.cam.ac.uk/faculty-research/faculty-a-z/raghavendra-rau/#item1"
                         target="_blank"> Prof. Raghavendra Rau</a> (Cambridge).</p>
-                <p style="font-size: large; ">Present at: FMA 2021, CICF 2021, EFMA 2021, DGF 2021, 4th Conference on
+                <p style="font-size: large; ">Present at: FMA 2021, CICF 2021, EFMA 2021, 4th Conference on
                     CSR, the Economy and
-                    Financial Markets 2021 </p>
+                    Financial Markets 2021, FMA European 2022</p>
             </li>
             <li class="lead">
 
@@ -154,7 +154,7 @@
                     Dr Zicheng
                     Lei (King's), Prof. Dimitris Petmezas (Durham),
                     and Prof. Raghavendra Rau (Cambridge).</p>
-                <p style="font-size: large; ">Present at: FMA European 2021</p>
+                <p style="font-size: large; ">Present at: FMA European 2021 2022, EFA Annual 2022, CICF 2022</p>
             </li>
         </ol>
         <br>
@@ -166,10 +166,15 @@
             </strong>
         </h3>
         <ol>
-            <!-- <li class="lead">CEO Home Bias and M&A.</li> -->
+            <li class="lead">CEO Homebias and M&A.
+                <p style="font-size: large; font-style: italic;">with Dr Zicheng Lei (King's), Prof. Dimitris Petmezas
+                    (Durham) </p>
+            </li>
+         
         </ol>
 
         <br>
+
         <h3>
             <strong>
                 Teaching
@@ -178,7 +183,8 @@
         <ol>
             <li class="lead">Teaching Assitant (Seminar Tutor). <em>ECON2181 Introduction to Financial Econometrics</em>
                 (Oct 2021-Dec
-                2021)</li>
+                2021)<p style="font-size: large; font-style: italic;">Student Evaluation Score: 5.0/5.0 </p></li>
+                
         </ol>
 
     </div>
