--- a/CN.html
+++ b/CN.html
@@ -131,15 +131,15 @@
                     (Durham)
                     and<a href="https://www.jbs.cam.ac.uk/faculty-research/faculty-a-z/raghavendra-rau/#item1"
                         target="_blank"> Prof. Raghavendra Rau</a> (Cambridge).</p>
-                <p style="font-size: large; ">会议宣讲: FMA 2021, CICF 2021, EFMA 2021, DGF 2021, 4th Conference on
+                <p style="font-size: large; ">会议宣讲: FMA 2021, CICF 2021, EFMA 2021,  4th Conference on
                     CSR, the Economy and
-                    Financial Markets 2021 </p>
+                    Financial Markets 2021, FMA European 2022</p>
             </li>
             <li class="lead">
                 <a>CEO的个人声誉和企业不当行为.</a> <p style="font-size: large; font-style: italic;">合作者 Dr Zicheng
                     Lei (King's), Prof. Dimitris Petmezas (Durham),
                     and Prof. Raghavendra Rau (Cambridge).</p>
-                <p style="font-size: large; ">会议宣讲: FMA European 2021</p>
+                <p style="font-size: large; ">会议宣讲: FMA European 2021 2022, EFA Annual 2022, CICF 2022</p>
             </li>
         </ol>
         <br>
@@ -151,7 +151,9 @@
             </strong>
         </h3>
         <ol>
-            <!-- <li class="lead">CEO的家乡认同和并购.</li> -->
+            <li class="lead">CEO的家乡偏好和企业并购
+                <p style="font-size: large; font-style: italic;">合作者 Dr Zicheng Lei (King's), Prof. Dimitris Petmezas
+                    (Durham) </p>
         </ol>
 
         <br>
@@ -162,7 +164,8 @@
         </h3>
         <ol>
             <li class="lead">课程助教 (习题课讲师). <em>ECON2181 金融计量学导论</em>
-                (2021年10月- 2021年12月)</li>
+                (2021年10月- 2021年12月)<p style="font-size: large; font-style: italic;">学生评分: 5.0/5.0 </p></li>
+                
         </ol>
         <br><br>
         <h3>
