--- a/Notes.html
+++ b/Notes.html
@@ -98,8 +98,8 @@
                     questions and doing research.)
                 <li style="font-size: large;">
                     <a
-                        href="https://www.yuque.com/docs/share/6aca8c02-de27-47e0-b09e-a01b904705e5?# 《Top Chinese Journals》">中文经管期刊目录</a>
-                    (更新四个中文经管顶级期刊的目录，包括经济研究，金融研究，管理世界，和中国工业经济)
+                        href="https://www.yuque.com/docs/share/6aca8c02-de27-47e0-b09e-a01b904705e5?# 《Top Chinese Journals》">Top Chinese Journals (in Chineses)</a>
+                    (Table of contents for 4 Chinese Top Econ. & Fin. jounrals, including "Economic Research Journal 经济研究", "Journal of Financial Research 金融研究", "China Industrial Economics 中国工业经济", "Journal of Management World 管理世界")
 
             </ul>
 
