--- a/CN.html
+++ b/CN.html
@@ -6,15 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description"
-    content="Chen Yang 杨晨, a PhD student in Finance at Durham University Business School. My research areas are corporate finance and corporate governance. " />
-    <meta name="Keywords" content="Corporate Finance, Corporate Governance, Chen Yang Durham, Chen Yang Finance, 杨晨 杜伦大学 吉林大学" />
+        content="Chen Yang 杨晨, a PhD student in Finance at Durham University Business School. My research areas are corporate finance and corporate governance. " />
+    <meta name="Keywords"
+        content="Corporate Finance, Corporate Governance, Chen Yang Durham, Chen Yang Finance, 杨晨 杜伦大学 吉林大学" />
     <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
     <title>Chen Yang</title>
 
     <!-- Bootstrap -->
     <link rel="stylesheet" href="./bootstrap-3.4.1-dist/css/bootstrap.min.css"
         integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
-        <link rel="shortcut icon" href="./iPhone Stocks.ico" />
+    <link rel="shortcut icon" href="./iPhone Stocks.ico" />
     <!-- HTML5 shim 和 Respond.js 是为了让 IE8 支持 HTML5 元素和媒体查询（media queries）功能 -->
     <!-- 警告：通过 file:// 协议（就是直接将 html 页面拖拽到浏览器中）访问页面时 Respond.js 不起作用 -->
     <!--[if lt IE 9]>
@@ -41,7 +42,8 @@
     <nav class="nanbar navbar-inverse " role="navigation" style="font-family: Georgia;">
 
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+            <button type="button" class="navbar-toggle" data-toggle="collapse"
+                data-target="#bs-example-navbar-collapse-1">
                 <span class="sr-only"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -49,13 +51,13 @@
             </button>
             <a href="index.html" class="navbar-brand">Chen Yang</a>
         </div>
-        <div class="collapse navbar-collapse" id = 'bs-example-navbar-collapse-1'>
+        <div class="collapse navbar-collapse" id='bs-example-navbar-collapse-1'>
             <ul class="nav navbar-nav navbar-right">
-                <li ><a href="index.html">About Me</a></li>
+                <li><a href="index.html">About Me</a></li>
                 <li><a href="./CV.html">CV</a></li>
                 <li><a href="./Coding.html">Coding</a></li>
                 <li><a href="./Links.html">Links</a></li>
-                <li><a href="./Notes.html">Notes</a></li>   
+                <li><a href="./Notes.html">Notes</a></li>
                 <li class="active"><a href="./CN.html">中文</a></li>
 
             </ul>
@@ -75,7 +77,9 @@
 
         </h2>
         <hr /> <br>
-        <div class="lead" style="font-size: x-large; "> 我是一名金融学的三年级博士研究生。我本科毕业于吉林大学经济学院金融系（2016），硕士毕业于英国利兹大学商学院的金融与投资专业（2018）。让我感到开心的事物：公司金融学，金融经济学，行为金融学，烹饪，和健怡可乐。</div>
+        <div class="lead" style="font-size: x-large; ">
+            我是一名金融学的三年级博士研究生。我本科毕业于吉林大学经济学院金融系（2016），硕士毕业于英国利兹大学商学院的金融与投资专业（2018）。让我感到开心的事物：公司金融学，金融经济学，行为金融学，烹饪，和健怡可乐。
+        </div>
         <br>
         <h3>
             <strong>
@@ -115,7 +119,7 @@
         </h3>
 
         <ul class="list-unstyled">
-            <li class="lead">公司金融，公司治理，ESG，企业社会责任，财务报告</li>
+            <li class="lead">公司治理，ESG/CSR，企业社会责任，企业并购，企业不当行为</li>
         </ul>
         <br>
         <h3>
@@ -126,19 +130,20 @@
 
         <ol>
             <li class="lead">
-                <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3718687" target="_blank">CEO的家乡认同和企业社会责任.</a>
-                <p style="font-size: large; font-style: italic;">合作者 Dr Zicheng Lei (King's), Prof. Dimitris Petmezas
-                    (Durham)
+                <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3718687"
+                    target="_blank">CEO的家乡认同和企业社会责任.</a>
+                <p style="font-size: large; font-style: italic;">合作者 Dr Zicheng Lei (伦敦国王学院), Prof. Dimitris Petmezas
+                    (杜伦大学)
                     and<a href="https://www.jbs.cam.ac.uk/faculty-research/faculty-a-z/raghavendra-rau/#item1"
-                        target="_blank"> Prof. Raghavendra Rau</a> (Cambridge).</p>
-                <p style="font-size: large; ">会议宣讲: FMA 2021, CICF 2021, EFMA 2021,  4th Conference on
-                    CSR, the Economy and
-                    Financial Markets 2021, FMA European 2022</p>
+                        target="_blank"> Prof. Raghavendra Rau</a> (剑桥大学).</p>
+                <p style="font-size: large; ">会议宣讲: FMA 2021, CICF 2021, EFMA 2021, 4th Conference on
+                    CSR, the Economy and Financial Markets 2021, FMA European 2022</p>
             </li>
             <li class="lead">
-                <a>CEO的个人声誉和企业不当行为.</a> <p style="font-size: large; font-style: italic;">合作者 Dr Zicheng
-                    Lei (King's), Prof. Dimitris Petmezas (Durham),
-                    and Prof. Raghavendra Rau (Cambridge).</p>
+                <a>CEO的个人声誉和企业不当行为.</a>
+                <p style="font-size: large; font-style: italic;">合作者 Dr Zicheng
+                    Lei (伦敦国王学院), Prof. Dimitris Petmezas (杜伦大学),
+                    and Prof. Raghavendra Rau (剑桥大学).</p>
                 <p style="font-size: large; ">会议宣讲: FMA European 2021 2022, EFA Annual 2022, CICF 2022</p>
             </li>
         </ol>
@@ -152,8 +157,8 @@
         </h3>
         <ol>
             <li class="lead">CEO的家乡偏好和企业并购
-                <p style="font-size: large; font-style: italic;">合作者 Dr Zicheng Lei (King's), Prof. Dimitris Petmezas
-                    (Durham) </p>
+                <p style="font-size: large; font-style: italic;">合作者 Dr Zicheng Lei (伦敦国王学院), Prof. Dimitris Petmezas
+                    (杜伦大学) </p>
         </ol>
 
         <br>
@@ -164,8 +169,9 @@
         </h3>
         <ol>
             <li class="lead">课程助教 (习题课讲师). <em>ECON2181 金融计量学导论</em>
-                (2021年10月- 2021年12月)<p style="font-size: large; font-style: italic;">学生评分: 5.0/5.0 </p></li>
-                
+                (2021年10月- 2021年12月)<p style="font-size: large; font-style: italic;">学生评分: 5.0/5.0 </p>
+            </li>
+
         </ol>
         <br><br>
         <h3>
@@ -175,11 +181,17 @@
         </h3>
         <ol>
             <li class="lead"><a herf="https://www.ruanyifeng.com/blog/weekly/">
-                阮一峰科技爱好者周刊
-            </a> . 最新计算机技术动态</li>
+                    阮一峰科技爱好者周刊
+                </a> . 最新计算机技术动态</li>
             <li class="lead"><a herf="http://www.ncpssd.org/index.aspx">
-                中国国家社会科学文献中心
-            </a> . 简单便捷免费下载国内期刊文章</li>
+                    中国国家社会科学文献中心
+                </a> . 简单便捷免费下载国内期刊文章</li>
+            <li class="lead"><a herf="https://www.cnopendata.com/">
+                    CnOpenData中国开放数据
+                </a> . 开放科研数据平台</li>
+            <li class="lead"><a herf="https://www.cnopendata.com/">
+                    连享会 (Stata内容平台)
+                </a>. 由中山大学连玉君团队创办，分享各类实证分析经验</li>
         </ol>
 
 
