--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         </h3>
 
         <ul class="list-unstyled">
-            <li class="lead">Corporate Finance, Corporate Governance, ESG, CSR, Financial Reporting</li>
+            <li class="lead">Corporate Governance, ESG/CSR, M&A, Financial Misconduct</li>
         </ul>
         <br>
         <h3>
