--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         <br>
         <h3>
             <strong>
-                Working Paper
+                Working Papers
             </strong>
         </h3>
 
