--- a/Notes.html
+++ b/Notes.html
@@ -90,6 +90,10 @@
                     collects corp. finance and corp. govarnance studies published on finance and economics top
                     journals.)
 
+                    <li style="font-size: large;">
+                        <a href="https://www.yuque.com/docs/share/9edaf621-556e-4b87-81b9-7288787ec09e?# 《China Studies on Fin. and Econ. Top》">China Studies in Top Econ. Fin. Journals</a> (This blog
+                        collects China studies published on finance and economics top
+                        journals.)
 
                 <li style="font-size: large;">
                     <a
