--- a/index.html
+++ b/index.html
@@ -150,7 +150,9 @@
             </li>
             <li class="lead">
 
-                <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4017747" target="_blank">CEO Personal Reputation and Financial Misconduct.</a> <p style="font-size: large; font-style: italic;">with
+                <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4017747" target="_blank">CEO Personal
+                    Reputation and Financial Misconduct.</a>
+                <p style="font-size: large; font-style: italic;">with
                     Dr Zicheng
                     Lei (King's), Prof. Dimitris Petmezas (Durham),
                     and Prof. Raghavendra Rau (Cambridge).</p>
@@ -170,7 +172,7 @@
                 <p style="font-size: large; font-style: italic;">with Dr Zicheng Lei (King's), Prof. Dimitris Petmezas
                     (Durham) </p>
             </li>
-         
+
         </ol>
 
         <br>
@@ -183,8 +185,9 @@
         <ol>
             <li class="lead">Teaching Assitant (Seminar Tutor). <em>ECON2181 Introduction to Financial Econometrics</em>
                 (Oct 2021-Dec
-                2021)<p style="font-size: large; font-style: italic;">Student Evaluation Score: 5.0/5.0 </p></li>
-                
+                2021)<p style="font-size: large; font-style: italic;">Student Evaluation Score: 5.0/5.0 </p>
+            </li>
+
         </ol>
 
     </div>
