--- a/Notes.html
+++ b/Notes.html
@@ -96,11 +96,11 @@
                 <li style="font-size: large;">
                     <a
                         href="https://www.yuque.com/docs/share/0085c526-c567-4fc2-a000-4bf2b7a1769d?# 《How to become a good researcher?》">How
-                        to become a good researcher</a> (This blog collects some articles about finding good research
+                        to Become A Good Researcher</a> (This blog collects some articles about finding good research
                     questions and doing research.)
                 <li style="font-size: large;">
                     <a
-                        href="https://www.yuque.com/docs/share/6aca8c02-de27-47e0-b09e-a01b904705e5?# 《Top Chinese Journals》">Top Chinese Journals (in Chineses)</a>
+                        href="https://www.yuque.com/docs/share/6aca8c02-de27-47e0-b09e-a01b904705e5?# 《Top Chinese Journals》">Top Chinese Journals (in Chinese)</a>
                     (Table of contents for 4 Chinese Top Econ. & Fin. jounrals, including "Economic Research Journal 经济研究", "Journal of Financial Research 金融研究", "China Industrial Economics 中国工业经济", "Journal of Management World 管理世界")
 
             </ul>
